--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 <body>
   <span class="title">Login Page</span>
   <hr>
-  <span class="body">Please Login to veiw the system</span>
+  <span class="body">Please Login to view the system</span>
   <span class="body">Try again later !!</span>
   <span class="body">We are building the website ❤️❤️❤️</span>
 </body>
